[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resource/Texture/AppIcon.png" type="Texture" id=1]
[ext_resource path="res://Script/Calendar.gd" type="Script" id=2]
[ext_resource path="res://Resource/Font/RoboSlab/RobotoSlab-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resource/StyleBox/CalendarMonthNumbers.tres" type="StyleBox" id=4]
[ext_resource path="res://Resource/Font/RoboSlab/RobotoSlab-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Resource/StyleBox/CalendatWeek.tres" type="StyleBox" id=6]
[ext_resource path="res://Resource/Font/DynamicFont/Weekend.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.952941, 0.870588, 0.964706 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0823529, 0.113725, 0.156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.929412, 1, 0.768627, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0823529, 0.113725, 0.156863, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.870588, 0.619608, 0.254902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0823529, 0.113725, 0.156863, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="DynamicFont" id=3]
size = 35
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.870588, 0.619608, 0.254902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.164706, 0.721569, 0.486275, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 5 )

[node name="Calendar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Control" parent="."]
margin_left = 10.0
margin_top = 94.0
margin_right = 10.0
margin_bottom = 94.0

[node name="TextureButton" type="TextureButton" parent="Button"]
margin_right = 30.0
margin_bottom = 29.0
rect_min_size = Vector2( 30, 26 )
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
visible = false
margin_left = 25.0
margin_top = 283.0
margin_right = 574.0
margin_bottom = 740.0
rect_min_size = Vector2( 549, 457 )
script = ExtResource( 2 )

[node name="Background" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Layer3" type="Panel" parent="UI/Background"]
margin_right = 549.0
margin_bottom = 457.0
custom_styles/panel = SubResource( 6 )

[node name="Layer2" type="Panel" parent="UI/Background"]
margin_right = 549.0
margin_bottom = 457.0
custom_styles/panel = SubResource( 1 )

[node name="Layer1" type="Panel" parent="UI/Background"]
margin_right = 549.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 2 )

[node name="DayGrid" type="GridContainer" parent="UI"]
margin_left = 35.0
margin_top = 69.0
margin_right = 513.0
margin_bottom = 409.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 7

[node name="Sunday" type="Panel" parent="UI/DayGrid"]
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_styles/panel = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/DayGrid/Sunday"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 7 )
text = "Sun"
align = 1
valign = 1

[node name="Monday" type="Panel" parent="UI/DayGrid"]
margin_left = 69.0
margin_right = 133.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/DayGrid/Monday"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 7 )
text = "Mon"
align = 1
valign = 1

[node name="Tuesday" type="Panel" parent="UI/DayGrid"]
margin_left = 138.0
margin_right = 202.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/DayGrid/Tuesday"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 7 )
text = "Tue"
align = 1
valign = 1

[node name="Wednesday" type="Panel" parent="UI/DayGrid"]
margin_left = 207.0
margin_right = 271.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/DayGrid/Wednesday"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 7 )
text = "Wed"
align = 1
valign = 1

[node name="Thursday" type="Panel" parent="UI/DayGrid"]
margin_left = 276.0
margin_right = 340.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/DayGrid/Thursday"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 7 )
text = "Thu"
align = 1
valign = 1

[node name="Friday" type="Panel" parent="UI/DayGrid"]
margin_left = 345.0
margin_right = 409.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/DayGrid/Friday"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 7 )
text = "Fri"
align = 1
valign = 1

[node name="Saturday" type="Panel" parent="UI/DayGrid"]
margin_left = 414.0
margin_right = 478.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/DayGrid/Saturday"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 7 )
text = "Sat"
align = 1
valign = 1

[node name="Month" type="GridContainer" parent="UI"]
margin_left = 10.0
margin_top = 6.0
margin_right = 539.0
margin_bottom = 54.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="MonthNumber" type="Panel" parent="UI/Month"]
margin_right = 96.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 48 )
custom_styles/panel = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/Month/MonthNumber"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 96, 48 )
custom_fonts/font = SubResource( 3 )
text = "00"
align = 1
valign = 1

[node name="MonthName" type="Panel" parent="UI/Month"]
margin_left = 106.0
margin_right = 423.0
margin_bottom = 48.0
rect_min_size = Vector2( 317, 48 )
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="UI/Month/MonthName"]
margin_right = 317.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Name"
align = 1
valign = 1

[node name="Year" type="Panel" parent="UI/Month"]
margin_left = 433.0
margin_right = 529.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 48 )
custom_styles/panel = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/Month/Year"]
margin_right = 96.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 48 )
custom_fonts/font = SubResource( 3 )
text = "0000"
align = 1
valign = 1

[connection signal="button_down" from="Button/TextureButton" to="UI" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="Button/TextureButton" to="UI" method="_on_TextureButton_button_up"]
